--- a/html/index.html
+++ b/html/index.html
@@ -1,48 +1,27 @@
-<!DOCTYPE>
+<!DOCTYPE >
 <html lang="pt-br">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="../css/style.css">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    </head>
+	<body>
+		<div id="fundo">
+			<div id="div2"> </div>
+			<div id="div1"> </div>	
+		</div>
 
-<body>
-	<div id="fundo">
+		<div id='points'>Points: 0</div>;
+		<div id="painel">
+			<button type="button"  id="acima" ><img src="../imgs/arrow-up.png"></button><br>
+			<button type="button"  id="esquerda" class="down"><img src="../imgs/arrow-left.png"></button>
+			<button type="button"  id="baixo" class="down"><img src="../imgs/arrow-down.png"></button>
+			<button type="button"  id="direita" class="down"><img src="../imgs/arrow-right.png"></button>
+		</div>
 	</div>
-	<div id="div2">
-		UwU
-	</div>
-	<div id="div1">
-		@-@
-	</div>
-	<div class="painel">
-
-		<hr>
-		<button type="button" id="para" >Parar cursor 1</button>
-		<button type="button" id="para2" >Parar cursor 2</button>
-		<hr>
-		<button type="button" id="acima" >Acima</button><br>
-		<button type="button" id="esquerda" >Esquerda</button>
-		<button type="button" id="direita" >Direita</button><br>
-		<button type="button" id="baixo" >Abaixo</button>
-		<hr>
-		<button type="button" id="alturaMais" >+Altura</button>
-		<button type="button" id="alturaMenos" >-Altura</button>
-		<hr>
-		<button type="button" id="larguraMais" >+Largura</button>
-		<button type="button" id="larguraMenos" >-Largura</button>
-		<hr>
-		<button type="button" id="cor" >Muda a cor</button>
-		<hr>
-		<button type="button" id="denovo" >Recomeçar</button>
-
-	</div>
-	<script src="../js/cod.js">
-		// mover cursor 2 - automático
-		
-	</script>
-</body>
-
+		<script src="../js/cod.js">
+            
+		</script>
+	</body>
 </html>
