--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -14,14 +14,11 @@
 
 		<div id='points'>Points: 0</div>;
 		<div id="painel">
-			<button type="button"  id="acima" ><img src="../imgs/arrow-up.png"></button><br>
-			<button type="button"  id="esquerda" class="down"><img src="../imgs/arrow-left.png"></button>
-			<button type="button"  id="baixo" class="down"><img src="../imgs/arrow-down.png"></button>
-			<button type="button"  id="direita" class="down"><img src="../imgs/arrow-right.png"></button>
+			<button type="button"  id="acima" ><img alt="arrow-up" src="../imgs/arrow-up.png"></button><br>
+			<button type="button"  id="esquerda" class="down"><img alt="arrow-left" src="../imgs/arrow-left.png"></button>
+			<button type="button"  id="baixo" class="down"><img alt="arrow-down" src="../imgs/arrow-down.png"></button>
+			<button type="button"  id="direita" class="down"><img alt="arrow-right" src="../imgs/arrow-right.png"></button>
 		</div>
-	</div>
-		<script src="../js/cod.js">
-            
-		</script>
+		<script src="../js/cod.js"></script>
 	</body>
 </html>
