--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE >
-<!-- html -->
+<!--html-->
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game</title>
     <link rel="stylesheet" href="../css/style.css">
-    </head>
+</head>
 	<body>
 		<div id="fundo">
 			<div id="div2"> </div>
