--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
 			<button type="button"  id="baixo" class="down"><img alt="arrow-down" src="../imgs/arrow-down.png"></button>
 			<button type="button"  id="direita" class="down"><img alt="arrow-right" src="../imgs/arrow-right.png"></button>
 		</div>
+		<div id="popUp"></div>
 		<script src="../js/cod.js"></script>
 	</body>
 </html>
