--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
 		</div>
 
 		<div id='points'>Points: 0</div>;
+		<div id="sound" onclick = "sound(musicCounter)"><img id='musicIcon' src="../imgs/sound.png" alt="sound Icon"></div>
 		<div id="painel">
 			<button type="button"  id="acima" ><img alt="arrow-up" src="../imgs/arrow-up.png"></button><br>
 			<button type="button"  id="esquerda" class="down"><img alt="arrow-left" src="../imgs/arrow-left.png"></button>
