--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 			<div id="div1"> </div>	
 		</div>
 
-		<div id='points'>Points: 0</div>;
+		<div id='points' onclick = "podium(0,'open')">Points: 0</div>;
 		<div id="sound" onclick = "sound(musicCounter)"><img id='musicIcon' src="../imgs/sound.png" alt="sound Icon"></div>
 		<div id="painel">
 			<button type="button"  id="acima" ><img alt="arrow-up" src="../imgs/arrow-up.png"></button><br>
